package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "hello_world_in_cpp",
    srcs = ["//src/concurrency/hello_world:hello_world.cc"],
)


py_binary(
    name = "hello_world_in_py",
    srcs = ["//src/concurrency/hello_world:hello_world.py"],
    main = "hello_world.py",
)