package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "hello_world_in_cpp",
    srcs = ["//src/concurrency/hello_world:hello_world.cc"],
)


py_binary(
    name = "hello_world_in_py",
    srcs = ["//src/concurrency/hello_world:hello_world.py"],
    main = "hello_world.py",
)

cc_binary(
    name = "any_callable_in_cpp",
    srcs = ["//src/concurrency/any_callable:any_callable.cc"],
)

py_binary(
    name = "any_callable_in_py",
    srcs = ["//src/concurrency/any_callable:any_callable.py"],
    main = "any_callable.py",
)


cc_binary(
    name = "detach_in_cpp",
    srcs = ["//src/concurrency/detach:detach.cc"],
)

py_binary(
    name = "detach_in_py",
    srcs = ["//src/concurrency/detach:detach.py"],
    main = "detach.py",
)

cc_binary(
    name = "exception_in_cpp",
    srcs = ["//src/concurrency/exception:exception.cc"],
)

cc_binary(
    name = "raii_in_cpp",
    srcs = ["//src/concurrency/RAII:raii.cc"],
)