package(
     default_visibility = ["//visibility:public"]
)

cc_binary(
    name = "copy_constructor",
    srcs = ["copy_constructor.cc"],
)

cc_binary(
    name = "copy_assignment",
    srcs = ["copy_assignment.cc"],
)

cc_binary(
    name = "shallow_copy",
    srcs = ["cp_cst_default_shallow_issur.cc"],
)

cc_binary(
    name = "destructor",
    srcs = ["destructor.cc"],
)

cc_binary(
    name = "dest_pit_fall_ref",
    srcs = ["destructor_pit_fall_ref_out_scope.cc"],
)

cc_binary(
    name = "class_like_value",
    srcs = ["class_like_value.cc"],
)